--- a/README
+++ b/README
@@ -70,7 +70,7 @@ SUPPORT
 
 Questions about how to use this library should be directed to the
 comp.lang.perl.modules USENET Newsgroup.  Bug reports and suggestions
-for improvements can be sent to <derhaag@n2h2.com>.
+for improvements can be sent to <aederhaag@newerasoftdevel.com>.
 
 You might also think of joining the mailing list by sending a message
 to <libwww-subscribe@perl.org>.
