Import of DERHAAG/FramesReady-1.023 from CPAN.
gitpan-cpan-distribution: FramesReady
gitpan-cpan-version:      1.023
gitpan-cpan-path:         DERHAAG/FramesReady-1.023.tar.gz
gitpan-cpan-author:       DERHAAG
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -31,6 +31,8 @@ FramesReady:
   HTML-Parser
   HTML-Form
   Digest-MD5
+  HTTP-Daemon
+  TAP-Fomatter-File
 
 These packages should be available on CPAN (see below).
 
