--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,102 @@
+2010-04-08  Alan E Derhaag  <aederhaag@alansys.newerasoftdevel.com>
+
+	* lib/LWP/UserAgent/FramesReady.pm:
+	Corrected for use of mirror that needed the parent class of
+	FramesReady.pm to process so check was added to request().
+
+	* t/net/mirror.t:
+	Complete remake to get the RC_NOT_MODIFIED response and implement
+	tests with Test::More for maintainability.
+
+2010-04-07  Alan E Derhaag  <aederhaag@alansys.newerasoftdevel.com>
+
+	* t/net/cgi-bin/moved:
+	Altered to be perl script for possible mod_perl equiped Apache
+	installation.
+
+	* t/net/moved.t:
+	Rewrote to use Test::More for better maintainability and
+	modularization.
+
+	* t/live/cpan.t:
+	Removed cpan.t as it served no purpose in test either the FramesReady.pm or
+	the Tree.pm module.
+
+	* MANIFEST:
+	Drop long commented out entries and live/cpan.t as it serves no
+	purpose in testing either the LWP/UserAgent/FramesReady.pm or the
+	HTTP/Response/Tree.pm module.
+
+2010-04-06  Alan E Derhaag  <aederhaag@alansys.newerasoftdevel.com>
+
+	* t/local/http.t:
+	Modified to to cleanup and not leave the temporary file behind.
+
+	* t/local/frames.t:
+	Rewrote to use Test::More for more flexibility and enhancement
+	capability.  Added cat_all_content for frame concatenation for the
+	prime use of scraping frames type harvests.
+
+	* t/net/http-timeout.t:
+	Rewrote to use Test::More expediting additions and changes.
+
+	* t/net/http-post.t: Rewrote to use Test::More and enhanced testing.
+
+	* t/net/http-get.t: Rewrote to use Test::More module and enhance tests.
+
+2010-04-05  Alan E Derhaag  <aederhaag@alansys.newerasoftdevel.com>
+
+	* t/local/frames.t:
+	Re-implement testing using the Test::More moodule for better coverage
+	of modules being tested.
+
+	* t/local/autoload.t:
+	Re-implement testing with the Test::More module to help increase
+	coverage of modules being tested.
+
+2010-04-02  Alan E Derhaag  <aederhaag@alansys.newerasoftdevel.com>
+
+	* t/local/http.t:
+	Extend timeout to allow by hand testing and allow close down to find
+	active running daemon.
+
+2010-03-31  Alan E Derhaag  <aederhaag@alansys.newerasoftdevel.com>
+
+	* Makefile.PL:
+	Hopefully requiring TAP::Formatter::File will eliminate the CPAN
+	testers problem on Windows (ActivePerl) installations.
+
+	* lib/LWP/UserAgent/FramesReady.pm:
+	Leave a few comments for anyone that looks for a reason that something
+	didn't work but also the TEST script changed requiring a CVS assigned
+	release number this module supplies.
+
+	* t/TEST:
+	Corrected change to eliminate warnings that disabled the 0 verbose
+	parameter.
+
+	* ChangeLog:
+	Update for recent work to hopefully satisfy the build on Windows boxes
+	running ActivePerl.
+
+	* Makefile.PL:
+	Added Test::Harness version that will satisfy the requirement for
+	TAP::Formatter::File on a ActivePerl installation.
+
+	* lib/LWP/UserAgent/FramesReady.pm:
+	Probably shouldn't have but the indent was bugging me and the
+	transition to get() instead of request() was signified in the
+	comments.
+
+	* t/live/cpan.t:
+	Slight burden to www.cpan.org but we probably can assume that it will
+	only was respond where llarian.com and activestate.com may not.  Of
+	course, the check needed to change with the URL being used.
+
+	* t/TEST:
+	Look for clean output by adding a check that there is input instead of
+	assuming there will.
+
 2010-03-31  Alan E Derhaag  <aederhaag@alansys.newerasoftdevel.com>
 
 	* lib/LWP/UserAgent/FramesReady.pm:
